--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@
   /* Aplique aqui alterações para desktops e tablets */
 }
 
-
-
-body{
-
+body {
   margin: 0;
   padding: 0;
   display: flex;
@@ -22,35 +19,32 @@ body{
   flex-direction: column;
 }
 
-
 #video-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
 
-   #texto { 
-    font-family: "Inter", sans-serif;  
-      text-align: start;
-      display: flex;
-      color: #fff;
-      font-size: 50px;
-      margin-top: 10px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    
-    }
- 
-
+#texto {
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  left: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 50px;
+  margin-top: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);  
+}
 
 #countdown {
-  font-family:"Inter", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 48px;
   text-align: center;
-  color: #FF0000; /* Altere a cor do texto */
+  color: #ff0000; /* Altere a cor do texto */
   background-color: #91ff00; /* Altere a cor de fundo */
   padding: 20px; /* Adicione um espaçamento interno */
 }
@@ -65,4 +59,3 @@ body{
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.7);
 }
-
